# py-yield-estimation-old

./: .flake8  .gitignore  .travis.yml  Dockerfile  README.md  README_template.md  environment.yml  field.json  package-lock.json  package.json  prefill.py  pull_request_template.md  pyproject.toml  serverless.yml
docs/: conf.py  index.rst
pkg_name/: cli.py
scripts/: build.sh  run_sentinel_stac.py  run_yield_estimation.py
src/: Cropping.py  __init__.py  api.py  cal_ndvi.py  cli.py  crop.py  cropping.py  handler.py  log_cfg.py  main.py  masking.py  resample.py  select.py  stack_bands.py
yield_estimation/: __init__.py  main.py
yield_estimation/test/: test_main.py
