[tool.poetry]
name = "src"
version = "0.0.0"
description = "Lambda for consuming sentinel COGs"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
click = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
sphinx_rtd_theme = "*"
sphinx = "*"
pre_commit = "*"

[tool.poetry.scripts]
src = "src.cli:cli"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["click"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
