[tool.poetry]
name = "src"
version = "0.0.0"
description = "Lambda for consuming sentinel COGs"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
click = "*"
geojson = "^2.5.0"
rasterio = "^1.1.7"
sat-search = "^0.3.0"
lambda-proxy = "^5.2.1"
intake-stac = "^0.3.0"
boto3 = "^1.16.0"
rioxarray = "^0.1.1"
xarray = "^0.16.1"

[tool.poetry.dev-dependencies]
pytest = "*"
sphinx_rtd_theme = "*"
sphinx = "*"
pre_commit = "*"
autopep8 = "^1.5.4"

[tool.poetry.scripts]
src = "src.cli:cli"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["click"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
