[tool.poetry]
name = "yield_estimation"
version = "0.0.0"
description = "Yield estimation model based on NDVI and weather"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
click = "*"
arrow = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "*"
sphinx_rtd_theme = "*"
sphinx = "*"
pre_commit = "*"

[tool.poetry.scripts]
src = "yield_estimation.cli:cli"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["arrow"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"